Added blog page.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     onmouseout="this.src='assets/behance b.png'">
                   <p class="descriptor">Bēhance</p>
                 </a>
-                <a href="https://github.com/UP859011?tab=repositories/" target="_blank">
+                <a href="https://github.com/AlexDLowe?tab=repositories/" target="_blank">
                     <img class="icon" src="assets/github b.png"
                     onmouseover="this.src='assets/github a.png'"
                     onmouseout="this.src='assets/github b.png'">
@@ -61,11 +61,11 @@
                     onmouseout="this.src='assets/linkedin b.png'">
                     <p class="descriptor">LinkedIn</p>
                 </a>
-                <a href="https://twitter.com/AlexDonovanLowe/" target="_blank">
-                    <img class="icon" src="assets/twitter b.png"
-                    onmouseover="this.src='assets/twitter a.png'"
-                    onmouseout="this.src='assets/twitter b.png'">
-                    <p class="descriptor">Twitter</p>
+                <a href="blog.html" target="_self">
+                  <img class="icon" src="assets/twitter b.png"
+                  onmouseover="this.src='assets/twitter a.png'"
+                  onmouseout="this.src='assets/twitter b.png'">
+                  <p class="descriptor">Blog</p>
                 </a>
             </div>
         </div>
