Corrected the blog image on the home page.

--- a/index.html
+++ b/index.html
@@ -64,9 +64,9 @@
           <p class="descriptor">LinkedIn</p>
         </a>
         <a href="blog.html" target="_self">
-          <img class="icon" src="assets/twitter b.png"
-          onmouseover="this.src='assets/twitter a.png'"
-          onmouseout="this.src='assets/twitter b.png'">
+          <img class="icon" src="assets/blog b.png"
+          onmouseover="this.src='assets/blog a.png'"
+          onmouseout="this.src='assets/blog b.png'">
           <p class="descriptor">Blog</p>
         </a>
       </div>
